--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ header nav ul {
 
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -86,6 +86,7 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 
 }
 
@@ -133,7 +134,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -287,8 +288,7 @@ section {
 }
 
 .section-title {
-    font-size: 55px;
-    display: inline-block;
+    font-size: 48px;
     padding: 0 100px 20px 100px;
     border-bottom: 3px solid;  
     margin-bottom: 35px;
@@ -364,5 +364,105 @@ section {
 
 .flex-row {
     display: flex;
-
 }
+
+/* start media queries */
+
+/* media querie for smalled desktop screens and smaller */
+@media screen and (max-width: 980px) {
+    header {
+        padding-bottom: 0;
+        justify-content: center;
+    }
+
+    header h1 {
+        width: 100%;
+        text-align: center;
+    }
+
+    header nav ul {
+        margin-top: 20px;
+        width: 100%;
+        justify-content: center;
+    }
+
+    header nav ul li a {
+        font-size: 20px;
+    }
+
+    footer h2, footer div {
+        text-align: center;
+        width: 100%;
+    }
+
+    .hero-cta, .hero-form {
+        width: 100%;
+    }
+
+    .hero-cta {
+        text-align: center;
+    }
+
+    .section-title {
+        width: 80%;
+    }
+
+    .trainer {
+        flex: 0 70%;
+    }
+
+    .contact-info iframe {
+        flex: 1 100%;
+    }
+}
+
+/* media querie for tablet screens and smaller */
+@media screen and (max-width: 768px) {
+    section {
+        padding: 30px 15px;
+    }
+    .step h3 {
+        flex: 1 100%;
+        text-align: center;
+    }
+    .step-info {
+        flex: 2 100%;
+        text-align: center;
+        justify-content: center;
+    }
+    .step-img {
+        flex: 0 32%;
+        margin-right: 0;
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+    .step-text {
+        flex: 100%;
+    }
+}
+ /* media querie for screenbb size 575px or smaller */
+ @media screen and (max-width: 575px) {
+     .hero-form button {
+         width: 100%;
+     }
+
+     .section-title {
+         width: 95%;
+     }
+
+     .intro p {
+         width: 100%;
+     }
+
+     .contact-info {
+         text-align: center;
+     }
+
+     .contact-info > * {
+         flex: 0 100%;
+     }
+
+     .contact-form {
+         order: 3;
+     }
+ }
