--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,6 +278,19 @@ section {
 }
 /* end trainer bio section */
 
+/* start service plan section*/
+.service-grid-container {
+    display: grid;
+}
+
+.service-grid-item {
+    width: 200px;
+    height: 50px;
+    background-color: orange;
+    border: solid;
+    color: black;
+}
+
 /* start reach out section */
 .contact {
     background: #024e76;
