--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    pisition: -webkit-sticky;
+    position: -webkit-sticky;
     position: sticky;
     top: 0;
     z-index: 9999;
@@ -340,6 +340,7 @@ section {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+ 
 }
 
 .trainer {
@@ -347,10 +348,18 @@ section {
     background: var(--secondary-color);
     color: var(--primary-color);
     flex: 1;
+    /*overflow: hidden;*/
 }
 
-.trainer img {
+.trainer-img {
     width: 100%;
+    min-height: 300px;
+    background-size: cover;
+    display: flex;
+    padding: 15px;
+    align-items: flex-end; 
+    position: relative;
+    overflow: hidden;
 }
 
 .trainer-bio {
@@ -368,18 +377,72 @@ section {
 
 .trainer-bio h3 {
     font-size: 28px;
+    display: none;
 }
 
 .trainer-bio h4 {
     font-weight: lighter;
     font-size: 22px;
     margin-bottom: 15px;
+    display: none;
 }
 
 .trainer-bio p {
     font-size: 17px;
 
 }
+
+.trainer-1 {
+    background-image: url("../images/trainer-1.jpg");
+}
+
+.trainer-2 {
+    background-image: url("../images/trainer-2.jpg");
+}
+
+.trainer-3 {
+    background-image: url("../images/trainer-3.jpg");
+}
+
+.trainer-img::after {
+    content: "";
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(0deg, var(--secondary-color),  rgba(252, 225, 56, 0.3) 100%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: all 0.5s ease-out;
+}
+
+.trainer:hover .trainer-img::after{
+    opacity: 1;
+}
+
+.trainer:hover .trainer-img h3, .trainer:hover .trainer-img h4 {
+    top: 0px;
+
+}
+
+
+.trainer-img h3 {
+    position: relative;
+    z-index: 9998;
+    font-size: 28px;
+    margin-bottom: 5px;
+    top: 200px;
+    transition: all 0.6s ease-out;
+}
+
+.trainer-img h4 {
+    position: relative;
+    z-index: 9998;
+    font-size: 22px;
+    top: 200px;
+    transition: all 0.6s ease-out .1s;
+}
+
 /* end trainer bio section */
 
 /* SERVICE STYLES BEGIN    */
@@ -632,7 +695,18 @@ section {
         grid-column: 1 / -1;
         grid-row: -1
     }
-}
+
+    /*.trainer-img::before {
+        display:none
+
+    }*/
+    .trainer-img h3, .trainer-img h4, .trainer-img::after {
+        display: none;
+    }
+
+    .trainer-bio h3, .trainer-bio h4 {
+        display:block;
+    }
  /* media querie for screenbb size 575px or smaller */
  @media screen and (max-width: 575px) {
      .hero-form button {
